--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     height: 100vh;
-    background-image: url('/Gal1.webp');
+    background-image: url('/gal1.webp');
     background-size: cover;
     background-position: center;
     color: #fff;
